--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>random-background</title>
     <link rel="stylesheet" href="./style.css" />
+    <link rel="shortcut icon" href="./img/unnamed.png" type="image/x-icon" />
   </head>
   <body>
     <section id="section" class="section"><p class="text">click me</p></section>
-
     <script src="./app.js"></script>
   </body>
 </html>
