--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
     <link rel="stylesheet" href="./style.css" />
     <link rel="shortcut icon" href="./img/unnamed.png" type="image/x-icon" />
   </head>
-  <body>
-    <section id="section" class="section"><p class="text">click me</p></section>
+  <body id="section1">
+    <div class="container">
+      <h1>Random Gradient Color</h1>
+      <small>click me</small>
+    </div>
+    <p id="id">linear-gradient( 43deg, #f3c857, #413f81 )</p>
     <script src="./app.js"></script>
   </body>
 </html>
